merges r22992 from trunk into ruby_1_9_1. -- * enumerator.c (Enumerator#{each_,}{with_index,with_object}): Fix   a bug where any parameter but the first one is dropped even if   multiple values are yielded with. [Bug #1198]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_1@23219 b2dd03c8-39d4-4d8f-98ff-823fe69b080e